--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 # Базовые параметры настройки конфигурации проекта
-dbname: postgres # В классе менять не надо
-user: postgres # Замените на свой логин от БД в классе
-password: qwerty # Замените на свой пароль от БД в классе
-host: localhost # Замените на 192.168.0.48 в классе
+dbname: postgres 
+user: postgres
+password: qwerty 
+host: localhost 
 port: 5433
-dbtableprefix: "public."  # Замените на свой логин от
+dbtableprefix: "public." 
